# Candy

./: AUDIT_CARGO.txt  AUDIT_CARGO_METADATA.json  AUDIT_CARGO_TREE.txt  AUDIT_GIT_SHA.txt  AUDIT_RUSTC.txt  AUDIT_TESTS.txt  CANDY_SPEC.md  CANDY_STATE.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
.github/workflows/: ci.yml
audit/legacy/: AUDIT_GIT_SHA.txt  AUDIT_TESTS.txt
audit/v0.5.3/: git-sha.txt  git-status.txt  tests.txt
crates/candy-ast/: Cargo.toml
crates/candy-ast/src/: lib.rs
crates/candy-cli/: Cargo.toml
crates/candy-cli/src/: main.rs
crates/candy-cli/tests/: agent_effect_diagnostics.rs  agent_output.rs  agent_secret_diagnostics.rs
crates/candy-diagnostics/: Cargo.toml
crates/candy-diagnostics/src/: lib.rs
crates/candy-diagnostics/tests/: diag_json.rs
crates/candy-ir/: Cargo.toml
crates/candy-ir/src/: lib.rs
crates/candy-lexer/: Cargo.toml
crates/candy-lexer/src/: lib.rs
crates/candy-lexer/tests/: lexer_effects_and_strings.rs  lexer_effects_strings.rs  lexer_positions.rs  lexer_protocol_final_keyword.rs  lexer_protocol_keywords.rs
crates/candy-parser/: Cargo.toml
crates/candy-parser/src/: lib.rs
crates/candy-parser/tests/: parse_effects_calls.rs  parse_smoke.rs
crates/candy-typecheck/: Cargo.toml
crates/candy-typecheck/src/: lib.rs
crates/candy-typecheck/tests/: effects.rs  protocols.rs  protocols_phase2.rs  protocols_phase3.rs  protocols_phase4.rs  protocols_phase5.rs  secret_branch.rs  secret_linearity.rs  typecheck_basic.rs
docs/: PHILOSOPHY.md  TODO.md  agent-json.md
